--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,10 @@
     "symlink-follow.autoFollow": true,
     "makefile.configureOnOpen": false,
 
-    "python.defaultInterpreterPath": ".venv/bin/python",
-}
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+
+    "go.goroot": "${workspaceFolder}/bazel-bin/go_tools",
+    "go.gopath": "${workspaceFolder}/bazel-bin/go_tools/bin/go",
+    "go.toolsGopath": "${workspaceFolder}/bazel-bin/go_tools/bin",
+    "go.terminal.activateEnvironment": true,
+} 
