--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -53,3 +53,4 @@ use_repo(go_sdk, "go_sdk")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
+use_repo(go_deps, "com_github_go_delve_delve", "org_golang_x_tools_gopls")
