--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,10 +15,14 @@
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
 
     "go.goroot": "${workspaceFolder}/bazel-bin/go_tools",
-    "go.gopath": "${workspaceFolder}/bazel-bin/go_tools/bin/go",
+    "go.gopath": "${workspaceFolder}/bazel-bin/go_tools/bin",
     "go.toolsGopath": "${workspaceFolder}/bazel-bin/go_tools/bin",
+    "go.toolsEnvVars": {
+        "GOPROXY" : "direct",
+    },
     "go.terminal.activateEnvironment": true,
     "go.delveConfig": {
         "debugAdapter": "dlv-dap",
     }
+
 } 
