--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -55,4 +55,4 @@ use_repo(go_sdk, "go_sdk")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
-use_repo(go_deps, "com_github_go_delve_delve", "io_rsc_quote", "org_golang_x_tools_gopls")
+use_repo(go_deps, "com_github_gin_gonic_gin", "com_github_go_delve_delve", "io_rsc_quote", "org_golang_x_tools_gopls")
