Go autocomplete finally works

--- a/.bazelignore
+++ b/.bazelignore
@@ -1,5 +1,8 @@
 # This is its own module. Don't include in current module.
 ./.venv
 
+# Similar to .venv but for go
+./.go
+
 # We download bazel here
 ./.bazel-bin
