--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
         "**/.bazel-bin": true,
         ".mypy_cache": true,
         "**/.venv": true,
-        ".out": true,
+        ".go": true,
         "**/.ruff_cache": true,
         "**/.mypy_cache": true,
     },
@@ -14,15 +14,13 @@
 
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
 
-    "go.goroot": "${workspaceFolder}/bazel-bin/go_tools",
-    "go.gopath": "${workspaceFolder}/bazel-bin/go_tools/bin",
-    "go.toolsGopath": "${workspaceFolder}/bazel-bin/go_tools/bin",
+    "go.goroot": "${workspaceFolder}/.go/goroot",
+    "go.gopath": "${workspaceFolder}/.go/gopath",
     "go.toolsEnvVars": {
         "GOPROXY" : "direct",
     },
     "go.terminal.activateEnvironment": true,
     "go.delveConfig": {
         "debugAdapter": "dlv-dap",
-    }
-
+    },
 } 
