--- a/leetcode/merge_two_sorted_lists/BUILD
+++ b/leetcode/merge_two_sorted_lists/BUILD
@@ -1,7 +1,7 @@
 load("@rules_python//python:defs.bzl", "py_test")
 
 py_test(
-    name = "merge_sorted_array",
+    name = "merge_two_sorted_lists",
     srcs = ["main.py"],
     main = "main.py",
     deps = ["@pypi//pytest"],
