--- a/leetcode/flood_fill/BUILD
+++ b/leetcode/flood_fill/BUILD
@@ -1,7 +1,7 @@
 load("@rules_python//python:defs.bzl", "py_test")
 
 py_test(
-    name = "template",
+    name = "flood_fill",
     srcs = ["main.py"],
     main = "main.py",
     deps = [
