--- a/requirements.lock.txt
+++ b/requirements.lock.txt
@@ -416,6 +416,12 @@ ruff==0.8.5 \
 sortedcontainers==2.4.0 \
     --hash=sha256:25caa5a06cc30b6b83d11423433f65d1f9d76c4c6a0c90e3379eaa43b9bfdb88 \
     --hash=sha256:a163dcaede0f1c021485e957a39245190e74249897e2ae4b2aa38595db237ee0
+    # via
+    #   -r requirements.in
+    #   sortedcontainers-stubs
+sortedcontainers-stubs==2.4.2 \
+    --hash=sha256:6cdbcf9c71198729dd6c0a8a7dc9742768f25b49384b91965d716a9d16ca7b2a \
+    --hash=sha256:c24e33877effa5a3eb85357112496ba33a0b681c05e0d5d3745664fd3be75d82
     # via -r requirements.in
 typing-extensions==4.12.2 \
     --hash=sha256:04e5ca0351e0f3f85c6853954072df659d0d13fac324d0072316b67d7794700d \
@@ -424,3 +430,4 @@ typing-extensions==4.12.2 \
     #   mypy
     #   pydantic
     #   pydantic-core
+    #   sortedcontainers-stubs
