--- a/llm_from_scratch/c2/BUILD
+++ b/llm_from_scratch/c2/BUILD
@@ -7,6 +7,10 @@ py_library(
         "__init__.py",
         "the-verdict.txt",
     ],
+    deps = [
+        "@pypi//numpy",
+        "@pypi//torch",
+    ],
 )
 
 notebook_env(
