--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,8 +12,6 @@
     "symlink-follow.autoFollow": true,
     "makefile.configureOnOpen": false,
 
-    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
-
     "python.analysis.exclude": [
         "**/bazel-*",
         "**/.venv/**",
@@ -28,4 +26,14 @@
     "go.delveConfig": {
         "debugAdapter": "dlv-dap",
     },
+
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+    "python.analysis.extraPaths": [
+        // pylance will try to read the python path for the ipynb files from
+        // the kernel's python. Kernel's running python process though has the
+        // packages on path, the path binary itself does not :( .
+        //
+        // This is a workaround.
+        "${workspaceFolder}/.venv/lib/python3.13/site-packages"
+    ],
 } 
