--- a/llm_from_scratch/c2/BUILD
+++ b/llm_from_scratch/c2/BUILD
@@ -10,6 +10,8 @@ py_library(
     deps = [
         "@pypi//numpy",
         "@pypi//torch",
+        "@pypi//tiktoken",
+        "@pypi//sentencepiece",
     ],
 )
 
