--- a/leetcode/best_time_buy_sell_stocks/BUILD
+++ b/leetcode/best_time_buy_sell_stocks/BUILD
@@ -1,8 +1,7 @@
 load("@rules_python//python:defs.bzl", "py_test")
 
 py_test(
-    name = "best_time_buy_sell_stocks",
-    srcs = ["main.py"],
-    main = "main.py",
+    name = "main_test",
+    srcs = ["main_test.py"],
     deps = ["@pypi//pytest"],
 )
