--- a/leetcode/merge_two_sorted_lists/BUILD
+++ b/leetcode/merge_two_sorted_lists/BUILD
@@ -1,8 +1,7 @@
 load("@rules_python//python:defs.bzl", "py_test")
 
 py_test(
-    name = "merge_two_sorted_lists",
-    srcs = ["main.py"],
-    main = "main.py",
+    name = "main_test",
+    srcs = ["main_test.py"],
     deps = ["@pypi//pytest"],
 )
