--- a/leetcode/sortedcontainers/BUILD
+++ b/leetcode/sortedcontainers/BUILD
@@ -1,12 +1,21 @@
-load("@rules_python//python:defs.bzl", "py_test")
+load("@rules_python//python:defs.bzl", "py_binary", "py_library")
 
-py_test(
+py_binary(
     name = "sortedcontainers",
     srcs = ["sortedcontainers.py"],
-    main = "sortedcontainers.py",
+    visibility = ["//:__subpackages__"],
     deps = [
         "@pypi//pytest",
-        "@pypi//pytest_timeout",
+        "@pypi//sortedcontainers",
+    ],
+)
+
+py_library(
+    name = "sortedcontainers_py",
+    srcs = ["sortedcontainers.py"],
+    visibility = ["//:__subpackages__"],
+    deps = [
+        "@pypi//pytest",
         "@pypi//sortedcontainers",
     ],
 )
