--- a/leetcode/template/BUILD
+++ b/leetcode/template/BUILD
@@ -1,11 +1,7 @@
 load("@rules_python//python:defs.bzl", "py_test")
 
 py_test(
-    name = "template",
-    srcs = ["main.py"],
-    main = "main.py",
-    deps = [
-        "@pypi//pytest",
-        "@pypi//pytest_timeout",
-    ],
+    name = "main_test",
+    srcs = ["main_test.py"],
+    deps = ["@pypi//pytest"],
 )
