--- a/.vscode/BUILD.bazel
+++ b/.vscode/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@rules_go//go:def.bzl", "go_binary", "go_library")
+load("@rules_python//python:defs.bzl", "py_binary", "py_library")
 
 go_library(
     name = "_vscode_lib",
@@ -11,4 +12,16 @@ go_binary(
     name = ".vscode",
     embed = [":_vscode_lib"],
     visibility = ["//visibility:public"],
+)
+
+py_binary(
+    name = "launch_target",
+    srcs = ["launch_target.py"],
+    visibility = ["//:__subpackages__"],
+)
+
+py_library(
+    name = ".vscode_pybin",
+    srcs = ["launch_target.py"],
+    visibility = ["//:__subpackages__"],
 )
