--- a/leetcode/invert_binary_tree/BUILD
+++ b/leetcode/invert_binary_tree/BUILD
@@ -1,8 +1,7 @@
 load("@rules_python//python:defs.bzl", "py_test")
 
 py_test(
-    name = "invert_binary_tree",
-    srcs = ["main.py"],
-    main = "main.py",
+    name = "main_test",
+    srcs = ["main_test.py"],
     deps = ["@pypi//pytest"],
 )
