--- a/llm_from_scratch/c3/BUILD
+++ b/llm_from_scratch/c3/BUILD
@@ -6,6 +6,7 @@ py_library(
     srcs = [
         "__init__.py",
     ],
+    visibility = ["//:__subpackages__"],
     deps = [
         "@pypi//torch",
     ],
