--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,4 +36,12 @@
         // This is a workaround.
         "${workspaceFolder}/.venv/lib/python3.12/site-packages"
     ],
+
+    "[python]": {
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": "always",
+        },
+        "editor.defaultFormatter": "charliermarsh.ruff",
+    },
 } 
