--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -7,13 +7,18 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  main:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Build
+      run: ./bazel build ...
+
     - name: Run static checks
       run: ./m lint
-    - name: Run tests
+
+    - name: Test
       run: ./bazel test ...
