--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -1,4 +1,4 @@
-name: Premerge Checks
+name: Merge Checks
 
 on:
   push:
@@ -6,13 +6,30 @@ on:
   pull_request:
     branches: [ main ]
 
-jobs:
-  build:
+env:
+  # so the CI bazel is used.
+  CI: "1"
 
-    runs-on: ubuntu-latest
+jobs:
+  main:
+
+    # This is personal project only tested on macos.
+    runs-on: macos-latest
 
     steps:
+    - uses: actions/checkout@v3
+
+    - uses: bazel-contrib/setup-bazel@0.15.0
+      with:
+        disk-cache: ${{ github.workflow }}
+        bazelisk-cache: true
+        repository-cache: true
+
+    - name: Build
+      run: ./bazel build ...
+
     - name: Run static checks
       run: ./m lint
-    - name: Run tests
+
+    - name: Test
       run: ./bazel test ...
